<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >
	    
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/regsuc_title"
	        style="@style/Title" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingBottom="20dp"
	        android:text="@string/regsuc_text" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/regsuc_usr_username"
	        android:id="@+id/regsuc_usr_username" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/regsuc_usr_first_name"
	        android:id="@+id/regsuc_usr_first_name" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/regsuc_usr_surname"
	        android:id="@+id/regsuc_usr_surname" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/regsuc_usr_email"
	        android:id="@+id/regsuc_usr_email" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/regsuc_usr_registry_time"
	        android:id="@+id/regsuc_usr_registry_time" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingTop="20dp"
	        android:text="@string/regsuc_choice" />
	    
	    
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:layout_marginTop="20dp" >
		    
		    <Button
		        android:layout_height="wrap_content"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:text="@string/regsuc_gomain"
		        android:id="@+id/regsuc_gomain" />
		    
		    <Button
		        android:layout_height="wrap_content"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:text="@string/regsuc_goenroll"
		        android:id="@+id/regsuc_goenroll" />
		    
		</LinearLayout>
	
	</LinearLayout>
</ScrollView>