<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/Title"
        android:text="@string/resverif_title"
        android:id="@+id/resverif_title"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/resverif_subtitle"
        android:text="@string/resverif_subtitle_negative"
        android:textColor="@color/light_red"
        android:layout_below="@id/resverif_title"
        style="@style/Subtitle"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/resverif_text"
        android:layout_below="@id/resverif_subtitle"
        android:text="@string/resverif_text_negative"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:id="@+id/resverif_bottom_buttons">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/resverif_gohome"
            android:id="@+id/resverif_gohome_button"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/resverif_govoicerec"
            android:id="@+id/resverif_govoicerec_button"/>

    </LinearLayout>

    <com.echo.holographlibrary.BarGraph
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_above="@id/resverif_bottom_buttons"
        android:id="@+id/resverif_results_chart"/>

</RelativeLayout>