<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hctpbl.biovoiceapp.BioVoiceAppActivity$BioVoiceAppFragment" >

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/app_name" />
   
   <Button
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/action_register"
       android:id="@+id/user_register" />
   
   <Button
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/action_voice_access"
       android:id="@+id/user_voice_access" />

</LinearLayout>
