<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:gravity="center"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context="com.hctpbl.biovoiceapp.BioVoiceAppActivity$UserRegisterFragment" >
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/user_register"
	        style="@style/Title" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/user_username"
	        style="@style/sectionHeader" />
	    
	    <EditText
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/editTextUsername"
	        android:inputType="textVisiblePassword" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/user_first_name"
	        style="@style/sectionHeader" />
	    
	    <EditText
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/editTextFirstName"
	        android:inputType="textPersonName" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/user_surname"
	        style="@style/sectionHeader" />
	    
	    <EditText
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/editTextSurname"
	        android:inputType="textPersonName" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/user_email"
	        style="@style/sectionHeader" />
	    
	    <EditText
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/editTextEmail"
	        android:inputType="textEmailAddress" />
	    
	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:id="@+id/buttonRegisterUser"
	        android:text="@string/user_register"
	        android:layout_marginTop="10dp" />
	
	</LinearLayout>

</ScrollView>